# pylms

./: .gitignore  README.md  app.py  global_record.json  history.json  main.py  pyproject.toml  pyrightconfig.json  setup.py  state.toml  test.py  typing.json
src/pylms/: constants.py  errors.py  info.py  mainloop.py  numutil.py  prepare.py  record.py  record_test.py
src/pylms/cache/: __init__.py  cache.py  cache_test.py  errors.py  rollback.py  rollback_test.py
src/pylms/clean/: __init__.py  clean_col_names.py  clean_columns.py  clean_completion_date.py  clean_duplicates.py  clean_email.py  clean_info.py  clean_internship.py  clean_na.py  clean_name.py  clean_order.py  clean_phone.py  clean_sort.py  clean_states.py  clean_str.py  clean_time.py  clean_training.py
src/pylms/clean_pipeline/: __init__.py  clean_new_data.py  clean_reg_data.py  clean_reg_test.py  errors.py  verify.py
src/pylms/cli/: __init__.py  classes_input.py  custom_inputs.py  email_input.py  emails_input.py  errors.py  input_interlude.py  input_num_test.py  input_to_config.py  input_with_quit.py  interact.py  onboard_req.py  option_input.py  path_input.py  record_input.py  select_class_date.py  select_student.py  serials_input.py  students_input.py
src/pylms/cli_utils/: __init__.py  class_dates.py  class_dates_test.py  class_nums.py  class_nums_test.py  class_parser.py  class_parser_test.py  class_verify.py  colors.py  date_str_parse.py  date_str_parse_test.py  date_strings_parse.py  prompt.py  (+8 more)
tests/: all_emails_test.py  all_records_test.py  cache_test.py  clean_reg_test.py  features_test.py  find_test.py  interlude_test.py  leaders_test.py  rollback_test.py  select_emails_test.py  update_test.py
(+444 files in other folders)
