#:tombi schema.strict = false
[project]
name = "pylms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.156.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "mypy>=1.14.0",
    "notebook>=7.3.2",
    "numpy>=2.2.1",
    "pandas-stubs>=2.2.3.241126",
    "pip>=24.3.1",
    "pydantic>=2.10.4",
    "openpyxl>=3.1.5",
    "oauth2client>=4.1.3",
    "tomlkit>=0.13.3",
    "pytest>=8.4.1",
    "pandas>=2.3.1",
    "importgraph>=0.1",
    "python-dotenv>=1.0.0",
    "streamlit>=1.49.1",
    "python-dateutil>=2.8.0",
    "types-python-dateutil>=2.8.0",
]

[tool.mypy]
follow_untyped_imports = true

[tool.pyright]
reportUnknownVariableType = false
reportAny = false
reportExplicitAny = false
reportUnknownArgumentType = false
